cmake_minimum_required(VERSION 3.9 FATAL_ERROR)
Project(CUDA_SAMPLE CXX C CUDA)
# 4070Ti的计算能力是sm_89，其他设备的参考 https://developer.nvidia.cn/cuda-gpus
# 可以使用nvcc --help查看 arch都支持哪些
set(CMAKE_CUDA_FLAGS "-arch=sm_89 -g -G -O3")
include_directories(./include)
add_subdirectory(0_hello_world)
add_subdirectory(1_check_dimension)
add_subdirectory(2_grid_block)
add_subdirectory(3_sum_arrays)
add_subdirectory(4_sum_arrays_timer)
add_subdirectory(5_thread_index)
add_subdirectory(6_sum_matrix)
add_subdirectory(7_device_info)
add_subdirectory(8_divergence)
add_subdirectory(9_sum_matrix2d)